# Algorithmic-Trading-Mark1

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  app.py  conftest.py  dashboard_app.py  decision_engine.py  docker-compose.yml  mlflow.db  multi_strategy.py  pyproject.toml  requirements.txt  run.py  telegram_controller.py
.github/workflows/: cd.yaml  ci.yaml
ai/: __init__.py  sentiment.py
brokers/: base.py  binance_broker.py  paper_broker.py
charts/quantumtrade/: Chart.yaml  values.yaml
charts/quantumtrade/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  mlflow-deployment.yaml  model-serving-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  secret.yaml  services.yaml  tradingbot-deployment.yaml
config/: settings.py
data/: __init__.py  base_client.py  crypto_client.py  data_client.py  loader.py  models.py  price_stream.py  stocks_client.py  validator.py
database/: __init__.py  db.py  trade_repository.py
docs/: PHASE1_SUMMARY.md  SETUP_PHASE1.md  STRUCTURE_MIGRATION.md  backtesting_advanced.md  blackboxai_migration_plan.json  execution.md  mlops.md  position_sizing.md
docs/explanations/: 1_project_tech_stack_explanation.md  2_system_architecture_deep_dive.md  3_full_project_line_by_line.md  3_line_by_line_code_breakdown.md  4_project_building_plan.md
docs/runbooks/: alert_runbook.md
examples/: multi_exchange_demo.py
execution/: broker_client.py  fill.py  forex_broker.py  order.py  paper_trader.py
k8s/: alertmanager-deployment.yaml  configmap.yaml  grafana-deployment.yaml  ingress.yaml  jaeger-deployment.yaml  mlflow-deployment.yaml  model-serving-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  prometheus-deployment.yaml  redis-statefulset.yaml  secret.yaml  services.yaml  tradingbot-deployment.yaml
live/: __init__.py  runner.py  trading_engine.py
ml/: __init__.py  ml_predictor.py
monitoring/: __init__.py  dashboard_server.py
notifications/: __init__.py  discord_webhook.py  email_notifier.py
portfolio/: __init__.py  performance.py
quantumtrade/: __init__.py  events.py  main.py
quantumtrade/adapters/arbitrage/: __init__.py  detector.py
quantumtrade/adapters/brokers/: __init__.py  alpaca_broker.py  base.py  paper_broker.py
quantumtrade/adapters/exchange/: __init__.py  manager.py
quantumtrade/adapters/execution/: __init__.py  base.py  broker_selector.py  cost_models.py  crypto_broker.py  factory.py  fill_simulator.py  models.py  smart_router.py  stocks_broker.py  tca.py
quantumtrade/adapters/notifications/: __init__.py  alerter.py  telegram_bot.py
quantumtrade/adapters/portfolio/: __init__.py  cross_exchange.py
quantumtrade/adapters/strategy/: __init__.py  plugin_loader.py
quantumtrade/backtesting/: __init__.py  engine.py  metrics.py  monte_carlo.py  reporter.py  walk_forward.py
quantumtrade/backtesting/simulation/: __init__.py  gap_risk.py  latency.py  liquidity.py  market_impact.py  simulator.py  slippage.py  spread.py
quantumtrade/core/portfolio_management/: tracker.py
quantumtrade/core/risk_management/: risk_manager.py
quantumtrade/core/trading_strategies/: __init__.py  base.py  ema_crossover.py  macd_strategy.py  sma_strategy.py  vwap_strategy.py
quantumtrade/deployment/: api_main.py
quantumtrade/domain/risk/: __init__.py  correlation.py  exposure.py  limits.py  models.py  portfolio_risk.py  position_sizer.py  risk_manager.py  stress.py  var.py
quantumtrade/infrastructure/config/: __init__.py  assets.py  config_schema.py  quantumtrade.yaml  quantumtrade.yaml.example  settings.py
quantumtrade/infrastructure/database/: db.py
quantumtrade/infrastructure/monitoring/: __init__.py  alertmanager.yml  dashboard_server.py  health.py  health_endpoint.py  logger.py  metrics.py  metrics_endpoint.py  prometheus.yml  structured_logging.py  telemetry.py  tracing.py
quantumtrade/infrastructure/tracing/: context.py  instrumentation.py
quantumtrade/interfaces/cli/: __init__.py  interactive.py
quantumtrade/interfaces/gui/: dashboard.py
quantumtrade/interfaces/http/: __init__.py  api_server.py  auth.py
quantumtrade/interfaces/telegram/: controller.py
quantumtrade/interfaces/websocket/: ws_server.py
quantumtrade/ml_ai/: feature_engineer.py  ollama_advisor.py
quantumtrade/mlops/: __init__.py  drift_detector.py  pipeline.py  registry.py  validator.py
quantumtrade/mlops/experiments/: __init__.py  tracker.py
quantumtrade/mlops/features/: __init__.py  online.py  registry.py  store.py
quantumtrade/mlops/monitoring/: __init__.py  alerts.py  metrics.py
quantumtrade/mlops/serving/: Dockerfile  __init__.py  predictor.py  server.py  versioning.py
quantumtrade/tests/unit/: test_full_backtest_simulation.py  test_gap_risk.py  test_latency_simulation.py  test_market_impact.py  test_monte_carlo.py  test_simulation_integration.py  test_slippage_models.py  (+1 more)
risk/: __init__.py  limits.py  position_sizer.py  risk_manager.py  stop_loss.py
scheduler/: __init__.py  market_hours.py  trading_scheduler.py
src/: __init__.py
src/backtesting/: __init__.py  engine.py  metrics.py  reporter.py  visualization.py
strategy/: __init__.py  base.py  bollinger_strategy.py  breakout_strategy.py  mean_reversion.py  momentum_strategy.py  rsi_strategy.py  scalping_strategy.py  signals.py
templates/: dashboard.html
tests/: integration_test_events.py  test_backtest.py  test_comprehensive.py  test_data_layer.py  test_ema_crossover_strategy.py  test_events.py  test_health.py  test_metrics.py  test_multi_exchange.py  test_paper_trading.py  test_phase1_quick.py  test_risk.py  test_strategy.py  test_tracing.py
tests/integration/: __init__.py  conftest.py  test_execution_flow.py  test_model_serving.py  test_retraining_pipeline.py
tests/unit/: __init__.py  conftest.py  test_drift_detection.py  test_feature_store.py  test_fill_simulator.py  test_mlops_registry.py  test_model_serving.py  test_position_sizer.py  test_smart_router.py  test_tca.py  test_validator.py
utils/: __init__.py  logger.py  reporting.py
(+23 files in other folders)
